# compiler

./: #U0422#U0435#U043a#U0441#U0442#U043e#U0432#U044b#U0439 #U0434#U043e#U043a#U0443#U043c#U0435#U043d#U0442.txt  .gitignore  CMakeLists.txt  README.md  add.asm  add_program  array.asm  array_program  final_showcase  final_showcase.mycc.asm  printf_demo  printf_demo.asm  program.ll  sc_and.asm  sc_and_program  Текстовый документ.txt
demo/: array_sum.src  final_showcase.src  printf_demo.src
docs/: codegen.md  control_flow_codegen.md  developer_guide.md  error_handling.md  final_demo.md  language_spec.md  sprint7.md  user_guide.md
examples/: factorial.src  hello.src  test_bool_and_comment.src  test_error.src
scripts/: build_and_run.sh  run_core_tests.sh  run_extended_tests_cmd.bat  run_extended_tests_gpp.sh  run_extended_tests_powershell.ps1  run_file_tests.py  run_final_tests.sh  run_ir_tests_cmd.bat  run_ir_tests_powershell.ps1  run_parser_tests.ps1  run_semantic_tests_cmd.bat  run_semantic_tests_powershell.ps1
src/: main.cpp
src/codegen/: abi.cpp  abi.h  array_generator.cpp  array_generator.h  control_flow_generator.cpp  control_flow_generator.cpp:Zone.Identifier  control_flow_generator.h  expression_generator.cpp  expression_generator.h  external_calls.cpp  external_calls.h  label_manager.cpp  label_manager.h  optimization_passes.cpp  optimization_passes.h  register_allocator.cpp  register_allocator.cpp:Zone.Identifier  register_allocator.h  stack_frame.cpp  stack_frame.h  x86_generator.cpp  x86_generator.h
src/ir/: basic_block.cpp  basic_block.h  control_flow.cpp  control_flow.h  control_flow.h:Zone.Identifier  ir_generator.cpp  ir_generator.h  ir_instructions.cpp  ir_instructions.h  optimizer.cpp  optimizer.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/libc/: stdlib.h
src/parser/: 12.cpp  ast.cpp  ast.h  grammar.txt  parser.cpp  parser.h
src/runtime/: runtime.asm  runtime.asm:Zone.Identifier
src/semantic/: analyzer.cpp  analyzer.h  errors.cpp  errors.h  symbol_table.cpp  symbol_table.h  type_system.cpp  type_system.h
src/utils/: diagnostics.cpp  diagnostics.h
tests/: codegen_tests.cpp  core_tests.cpp  core_tests_extended.cpp  ir_tests.cpp  semantic_tests.cpp
tests/codegen/valid/arithmetic_ops/: simple_add.src
tests/codegen/valid/control_flow/: if_else.src
tests/codegen/valid/function_calls/: add_call.src
tests/control_flow/valid/complex_expressions/: precedence.src
tests/control_flow/valid/conditionals/: nested_if.src
tests/control_flow/valid/logical_ops/: short_circuit_and.src  short_circuit_or.src
tests/control_flow/valid/loops/: for_sum.src  while_sum.src
tests/external_calls/valid/: printf_demo.src
tests/final/bad/semantic_errors/: undefined_variable.src
tests/final/bad/syntax_errors/: missing_semicolon.src
tests/final/bad/type_errors/: bad_return.src
tests/final/good/arithmetic/: simple.src
tests/final/good/arrays/: static_array.src
tests/final/good/control_flow/: short_circuit.src  short_circuit.src:Zone.Identifier
tests/final/good/functions/: recursive_factorial.src
tests/final/good/integration/: final_showcase.src
tests/ir/generation/control_flow/: if_else.src  while_loop.src
tests/ir/generation/expressions/: arithmetic.src
tests/ir/generation/functions/: call.src
tests/ir/generation/integration/: factorial.src
tests/ir/validation/structural_checks/: simple.src
tests/lexer/invalid/: identifier_starts_with_underscore.expected_errors  identifier_starts_with_underscore.src  invalid_character.expected_errors  invalid_character.src  malformed_float.expected_errors  malformed_float.src  unterminated_comment.expected_errors  unterminated_comment.src  unterminated_string.src
tests/lexer/valid/: comments_whitespace.expected  comments_whitespace.src  identifiers.expected  identifiers.src  keywords.expected  keywords.src  mixed_program.expected  mixed_program.src  numbers.expected  numbers.src  operators_delimiters.expected  operators_delimiters.src  strings.expected  strings.src
tests/optimization/: constant_folding.src
tests/parser/invalid/: chained_relational.expected_errors  chained_relational.src  invalid_assignment_target.expected_errors  invalid_assignment_target.src  malformed_expression.src  missing_semicolon.expected_errors  missing_semicolon.src  test_if_missing_paren.src  test_missing_semicolon.src  test_unclosed_block.src  unclosed_block.expected_errors  unclosed_block.src
tests/parser/valid/: control_flow.expected  control_flow.src  dangling_else.expected  dangling_else.src  expression_precedence.expected  expression_precedence.src  function_call.expected  function_call.src  struct_and_global.expected  struct_and_global.src  test_if.src
tests/semantic/invalid/argument_errors/: bad_function_call.expected_errors  bad_function_call.src
tests/semantic/invalid/duplicate_declaration/: duplicate_variable.expected_errors  duplicate_variable.src
tests/semantic/invalid/scope_errors/: out_of_scope.src
tests/semantic/invalid/type_mismatch/: assignment_type_mismatch.src
tests/semantic/invalid/undeclared_variable/: undeclared_variable.expected_errors  undeclared_variable.src
tests/semantic/valid/complex_programs/: functions_and_types.expected_summary  functions_and_types.src
tests/semantic/valid/nested_scopes/: block_shadowing.src
